show colors and codes side by side

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,9 @@ import HexToTailwind from "../components/HexToTailwind";
   </head>
   <body>
     <main class="mx-auto max-w-screen-sm">
-      <h1>HEX to Tailwind</h1>
+      <h1 class="text-3xl font-bold">
+        Convert your HEX code to the closest color in the Tailwind palette
+      </h1>
 
       <HexToTailwind client:load />
     </main>
