fit color comparison into grid

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import HexToTailwind from "../components/HexToTailwind";
     />
   </head>
   <body>
-    <main class="mx-auto max-w-screen-sm">
+    <main class="mx-auto max-w-prose">
       <h1 class="text-3xl font-bold">
         Convert your HEX code to the closest color in the Tailwind palette
       </h1>
