--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,8 +15,8 @@ import HexToTailwind from "../components/HexToTailwind";
     />
   </head>
   <body>
-    <main class="mx-auto max-w-prose">
-      <h1 class="text-3xl font-bold">
+    <main class="mx-auto max-w-prose p-3">
+      <h1 class="text-3xl font-bold mb-10">
         Convert your HEX code to the closest color in the Tailwind palette
       </h1>
 
