tailwind color can be copied with Enter/Space

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,13 +42,15 @@ import HexToTailwind from "../components/HexToTailwind";
           </p>
           <p>
             You can quickly copy either of the two generated color codes by
-            clicking/tapping on the clipboard icon. And you can compare the two
+            clicking or tapping on the clipboard icon, or by pressing the Space
+            or Enter keys when focused on the icon. And you can compare the two
             colors visually.
           </p>
           <p>
-            We also highlight whether the difference is visible to the human
-            eye. We do this by checking whether the Delta E score is higher than
-            1, which again is the official way to establish the fact.
+            We also highlight whether the difference between the HEX code input
+            and the generated Tailwind color is visible to the human eye. We do
+            this by checking whether the Delta E score is higher than 1, which
+            is the official way to establish this fact.
           </p>
         </div>
       </section>
