about section and start of contact me section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -54,6 +54,44 @@ import HexToTailwind from "../components/HexToTailwind";
           </p>
         </div>
       </section>
+      <section class="mb-8">
+        <h2 class="text-2xl font-bold mb-3">About</h2>
+        <div class="space-y-3">
+          <p>
+            Hi there! My name is Mihail and I'm a software engineer based in
+            London, UK. I was initially sceptical of Tailwind, but I decided to
+            give it a go last year and never looked back.
+          </p>
+          <p>
+            I often check out other websites for design inspiration, especially
+            around colour themes. But not everyone uses Tailwind; in those
+            instances, I have to figure out a way to fetch it from the HEX code
+            found in the CSS. Hence why I decided to build this website :)
+          </p>
+          <p>
+            I built the website using the <a
+              href="https://astro.build/"
+              class="underline"
+              target="_blank">Astro</a
+            > and <a href="https://react.dev/" class="underline" target="_blank"
+              >React</a
+            > frameworks. The site is hosted on <a
+              href="https://pages.cloudflare.com/"
+              class="underline"
+              target="_blank">Cloudflare Pages</a
+            >, for free (woohoo!).
+          </p>
+          <p></p>
+        </div>
+      </section>
+      <section>
+        <h2 class="text-2xl font-bold mb-3">Contact me</h2>
+        <div class="space-y-3">
+          <p>Have questions/feedback? Send a message with the form below.</p>
+          <p>form</p>
+          <p>You can also reach out to me directly on LinkedIn.</p>
+        </div>
+      </section>
     </main>
   </body>
 </html>
