--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -82,10 +82,13 @@ import Link from "../components/Link.astro";
       </section>
       <section>
         <h2 class="text-2xl font-bold mb-3">Contact me</h2>
-        <div class="space-y-3">
-          <p>Have questions/feedback? Send a message with the form below.</p>
-          <FeedbackForm />
-          <p>
+        <div>
+          <p class="mb-3">
+            Have questions/feedback? Send a message using the form below;
+            include your email if you'd like me to get back to you.
+          </p>
+          <FeedbackForm client:load />
+          <p class="mt-3">
             You can also reach out to me directly <Link
               url="https://linkedin.com/in/mihailmarian">on LinkedIn</Link
             >.
