--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -74,7 +74,7 @@ import Link from "../components/Link.astro";
               url="https://react.dev/">React</Link
             > frameworks for the website, and it's hosted on <Link
               url="https://pages.cloudflare.com/">Cloudflare Pages</Link
-            >, for free (woohoo!).
+            > for free (woohoo!).
           </p>
           <p></p>
         </div>
