--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -95,5 +95,8 @@ import Link from "../components/Link.astro";
         </div>
       </section>
     </main>
+    <footer class="my-5 text-center">
+      Copyright Tuxedo Software {new Date().getFullYear()}
+    </footer>
   </body>
 </html>
