--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,13 +7,13 @@ import Link from "../components/Link.astro";
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>HEX to Tailwind</title>
     <meta
       name="description"
-      content="Find the closest Tailwind color for a given HEX code."
+      content="Find the closest Tailwind color for a given HEX code. A simple online web app that is completely free."
     />
   </head>
   <body class="bg-neutral-100">
