--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,12 @@
 import HexToTailwind from "../components/HexToTailwind";
 import FeedbackForm from "../components/FeedbackForm";
 import Link from "../components/Link.astro";
+
+const title = "HEX to Tailwind";
+const description =
+  "Find the closest Tailwind color for a given HEX code. A simple online web app that is completely free.";
+const canonicalURL = new URL(Astro.url.pathname, Astro.site);
+const image = "/meta.webp";
 ---
 
 <html lang="en">
@@ -10,11 +16,28 @@ import Link from "../components/Link.astro";
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>HEX to Tailwind</title>
-    <meta
-      name="description"
-      content="Find the closest Tailwind color for a given HEX code. A simple online web app that is completely free."
-    />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href={canonicalURL} />
+
+    <!-- Primary Meta Tags -->
+    <title>{title}</title>
+    <meta name="title" content={title} />
+    <meta name="description" content={description} />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content={Astro.url} />
+    <meta property="og:title" content={title} />
+    <meta property="og:description" content={description} />
+    <meta property="og:image" content={new URL(image, Astro.url)} />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content={Astro.url} />
+    <meta property="twitter:title" content={title} />
+    <meta property="twitter:description" content={description} />
+    <meta property="twitter:image" content={new URL(image, Astro.url)} />
 
     <!-- Analytics -->
     {
