fix build issues

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,6 +43,7 @@ const image = "/meta.webp";
     {
       import.meta.env.PROD && (
         <script
+          is:inline
           defer
           src="https://um.app.taralys.com/hi"
           data-website-id="46137bcf-56c8-4c56-a6a1-e13a8af5255d"
