opengraph site_name

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,6 +30,7 @@ const image = "/meta.webp";
     <meta property="og:url" content={Astro.url} />
     <meta property="og:title" content={title} />
     <meta property="og:description" content={description} />
+    <meta property="og:site_name" content="HEX to Tailwind" />
     <meta property="og:image" content={new URL(image, Astro.url)} />
 
     <!-- Twitter -->
