--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -122,7 +122,7 @@ const image = "/meta.webp";
             Have questions/feedback? Send a message using the form below;
             include your email if you'd like me to get back to you.
           </p>
-          <FeedbackForm client:load />
+          <FeedbackForm client:only="react" />
           <p class="mt-3">
             You can also reach out to me directly <Link
               url="https://linkedin.com/in/mihailmarian">on LinkedIn</Link
