right analytics urls

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,8 +47,8 @@ const image = "/meta.webp";
         <script
           is:inline
           defer
-          src={import.meta.env.ANALYTICS_URL}
-          data-website-id={import.meta.env.ANALYTICS_WEBSITE_ID}
+          src={import.meta.env.PUBLIC_ANALYTICS_URL}
+          data-website-id={import.meta.env.PUBLIC_ANALYTICS_WEBSITE_ID}
         />
       )
     }
