add open source section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -117,6 +117,17 @@ const image = "/meta.webp";
           <p></p>
         </div>
       </section>
+      <section class="mb-8">
+        <h2 class="text-2xl font-bold mb-3">Open source</h2>
+        <div class="space-y-3">
+          <p>
+            I've open-sourced the website! You can find the code on <Link
+              url="https://github.com/mihailthebuilder/hex-tailwind/"
+              >GitHub</Link
+            >.
+          </p>
+        </div>
+      </section>
       <section>
         <h2 class="text-2xl font-bold mb-3">Contact me</h2>
         <div>
